fix overflow issues with sidebar

--- a/src/App.css
+++ b/src/App.css
@@ -3,4 +3,5 @@
 	color: #fff;
 	height: 100vh;
 	width: 100vw;
+	overflow: hidden;
 }
