--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,10 @@
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap");
 
+html,
 body {
 	margin: 0;
 	padding: 0;
+	height: 100vh;
 	background-color: #0e0e23;
 	font-family: "Inter", sans-serif;
 	overflow: hidden;
